# parano-svn

tags/release-0.2.0/: ChangeLog  autogen.sh
tags/release-0.2.0/mime/: parano.applications
tags/release-0.2.0/src/: parano.py
tags/release-0.2.1/: configure.in  parano.desktop.in
tags/release-0.2.1/po/: parano.pot
tags/release-0.2.1/src/: parano.py
tags/release-0.2.2/: AUTHORS  ChangeLog  TODO  parano.spec
tags/release-0.2.2/po/: fr.po
tags/release-0.2.2/src/: parano.py
tags/release-0.3.0/: ChangeLog  configure.in
tags/release-0.3.0/src/: parano.py
tags/release-0.3.1/parano/src/: parano.glade
tags/release-0.3.1/src/: parano.py
tags/release-0.3.2/src/: parano.glade  parano.py
tags/release-0.3.3/: ChangeLog
tags/release-0.3.3/mime/: Makefile.am
tags/release-0.3.3/po/: fr.po  parano.pot
tags/release-0.3.4/: ChangeLog  configure.in
tags/release-0.3.4/src/: parano.gladep  parano.py
tags/release-0.3.5/: TODO  parano.desktop.in  run  run-tests
tags/release-0.3.5/mime/: parano.applications
tags/release-0.3.5/po/: parano.pot
tags/release-0.3.5/src/: Makefile.am  parano.glade  paranoTests.py
trunk/: AUTHORS  ChangeLog  Makefile.am  TODO  configure.in  parano.desktop  parano.desktop.in
trunk/mime/: Makefile.am  parano.keys  parano.mime  parano.xml
trunk/po/: POTFILES.in  bg.po  fr.po  parano.pot  sv_SE.po
trunk/src/: Makefile.am  parano.glade  parano.in  parano.py  paranoTests.py
